// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|/m-error-pages/m-error-config-not-supported default 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-warning m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        L'application pourrait ne pas fonctionner correctement avec ce navigateur
        <br />
        ou cet appareil
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        La version du navigateur ou du système d'exploitation que vous utilisez n'est pas officiellement prise en charge.
      </p>
      <p
        class="m-message-page__hints m--no-content"
      >
        Pour une expérience optimale, assurez-vous d'utiliser la version la plus récente de votre navigateur préféré, sur un système d'exploitation compatible.
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|/m-error-pages/m-error-config-not-supported hints 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-warning m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        L'application pourrait ne pas fonctionner correctement avec ce navigateur
        <br />
        ou cet appareil
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        My only custom hint
      </p>
      <p
        class="m-message-page__hints m--no-content"
      >
        My second (long) custom hint.Lorem ipsum dolor
                sit amet, consectetur adipiscing elit. Nulla egestas urna rhoncus ipsum congue lobortis. 
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|/m-error-pages/m-error-config-not-supported links 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-warning m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        L'application pourrait ne pas fonctionner correctement avec ce navigateur
        <br />
        ou cet appareil
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        La version du navigateur ou du système d'exploitation que vous utilisez n'est pas officiellement prise en charge.
      </p>
      <p
        class="m-message-page__hints m--no-content"
      >
        Pour une expérience optimale, assurez-vous d'utiliser la version la plus récente de votre navigateur préféré, sur un système d'exploitation compatible.
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|/m-error-pages/m-error-config-not-supported title 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-warning m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        A Custom Title
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        La version du navigateur ou du système d'exploitation que vous utilisez n'est pas officiellement prise en charge.
      </p>
      <p
        class="m-message-page__hints m--no-content"
      >
        Pour une expérience optimale, assurez-vous d'utiliser la version la plus récente de votre navigateur préféré, sur un système d'exploitation compatible.
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;
